// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-1ve391v {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.cache-1ve391v>* {
  margin-top: 0;
}

.cache-1ve391v>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        />
      </div>
      <div />
    </div>
    <div
      class="cache-1ve391v elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-ov2pcl {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4f0599;
  opacity: inherit;
  cursor: default;
}

.cache-ov2pcl>* {
  margin-top: 0;
}

.cache-ov2pcl>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        />
      </div>
      <div />
    </div>
    <div
      class="cache-ov2pcl elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-oz6ls {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-oz6ls>* {
  margin-top: 0;
}

.cache-oz6ls>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        />
      </div>
      <div />
    </div>
    <div
      class="cache-oz6ls elb23zt0"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-sfdutq {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ag7udt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-k9zdi4 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.cache-k9zdi4>* {
  margin-top: 0;
}

.cache-k9zdi4>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="e1l6meh00 cache-sfdutq e1l6meh01"
    >
      <div
        class="elb23zt1 e1l6meh00 cache-ag7udt e1l6meh01"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        />
      </div>
      <div />
    </div>
    <div
      class="cache-k9zdi4 elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
